--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="shortcut icon" type="image/png" href="logo.png">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<title>Multiple_Language_Using_Jquery_Json</title>
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="jquery.min.js"></script>
 	<script type="text/javascript">
 		var arrLang = {
